feat: 全站双端同步操作提示
- 后端领取任务时返回详细错误：已被「XXX」领取
- PC端裁剪页面显示后端返回的详细错误消息
- 手机端批量领取时显示具体领取失败原因
- MaterialPurchaseOrchestrator/CuttingTaskOrchestrator 添加领取人检测逻辑
- 新增 ReceiveResult DTO 用于统一领取操作响应